--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
   },
   "devDependencies": {
     "requirejs": "2.0.x",
-    "less": "1.3.x"
+    "less": "1.3.x",
+    "mocha": "1.3.x",
+    "chai": "1.2.x"
+
   },
   "keywords": []
 }
