--- a/.gitmodules
+++ b/.gitmodules
@@ -22,9 +22,9 @@
 [submodule "vendor/pivotal/jasmine"]
 	path = vendor/pivotal/jasmine
 	url = https://github.com/pivotal/jasmine.git
-[submodule "vendor/derickbailey/backbone.marionette"]
-	path = vendor/derickbailey/backbone.marionette
-	url = https://github.com/derickbailey/backbone.marionette
 [submodule "vendor/twitter/bootstrap"]
 	path = vendor/twitter/bootstrap
 	url = https://github.com/twitter/bootstrap.git
+[submodule "vendor/marionettejs/backbone.marionette"]
+	path = vendor/marionettejs/backbone.marionette
+	url = https://github.com/marionettejs/backbone.marionette.git
