--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,9 @@
 [submodule "vendor/marionettejs/backbone.marionette"]
 	path = vendor/marionettejs/backbone.marionette
 	url = https://github.com/marionettejs/backbone.marionette.git
+[submodule "vendor/marionettejs/backbone.wreqr"]
+	path = vendor/marionettejs/backbone.wreqr
+	url = https://github.com/marionettejs/backbone.wreqr.git
+[submodule "vendor/marionettejs/backbone.babysitter"]
+	path = vendor/marionettejs/backbone.babysitter
+	url = https://github.com/marionettejs/backbone.babysitter.git
